@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
   id="plugin.video.dr.dk.bonanza"
-  version="1.0.4"
+  version="1.0.5"
   name="DR.dk Bonanza"
   provider-name="twinther [tommy@winther.nu]">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
-		<import addon="script.module.danishaddons" version="1.0.1"/>
+		<import addon="script.module.danishaddons" version="1.1.0"/>
 		<import addon="script.module.simplejson" version="2.0.10"/>
   </requires>
   <extension point="xbmc.python.pluginsource" library="addon.py">
@@ -17,8 +17,7 @@
     <summary lang="da">Det bedste og værste fra DR's arkiver</summary>
     <description lang="en">On the 16th of January 2008 DR (Danish Broadcasting Corporation) opened up its great archive to what became Bonanza. Here you can see some of the best - and worst, of what has been produced during the years.</description>
     <description lang="da">16. januar 2008 åbnede DR for sit store arkiv med Bonanza. Her kan du se lidt af det bedste - og værste af det, der er blevet produceret i årenes løb.</description>
-
-		<license>GPL 2.0</license>
-		<platform>all</platform>        
+    <license>GPL 2.0</license>
+    <platform>all</platform>
   </extension>
 </addon>
