@@ -1,3 +1,6 @@
+[B]Version 1.0.5[/B]
+- Updated to danishaddons module 1.1.0
+
 [B]Version 1.0.4[/B]
 - Fixed patching of RTMP URL
 
